fixed panel#speed result not showing

--- a/css/style-home.css
+++ b/css/style-home.css
@@ -241,6 +241,28 @@ html, body {
   padding: 0.5em;
 }
 
+.panel .result {
+  display: flex;
+  flex-direction: row;
+  left: 62.5vw;
+  position: relative;
+  align-items: center;
+  width: fit-content;
+  background-color: white;
+  font-size: 1.5em;
+  border-radius: 5px;
+  padding: 0.5em;
+}
+
+.panel .result .num + .unit{
+  width: fit-content;
+  height: auto;
+  background-color: white;
+  border-radius: 5px;
+  font-size: 1em;
+  margin: 0 0.5em;
+}
+
 .panel .option {
   position: relative;
   left: 25vw;
