--- a/css/style-projectile.css
+++ b/css/style-projectile.css
@@ -1,25 +1,3 @@
-.panel#projectile .result {
-  display: flex;
-  flex-direction: row;
-  left: 62.5vw;
-  position: relative;
-  align-items: center;
-  width: fit-content;
-  background-color: white;
-  font-size: 1.5em;
-  border-radius: 5px;
-  padding: 0.5em;
-}
-
-.panel#projectile .result .num + .unit{
-  width: fit-content;
-  height: auto;
-  background-color: white;
-  border-radius: 5px;
-  font-size: 1em;
-  margin: 0 0.5em;
-}
-
 .panel#projectile #btnSolve {
   color: white;
   background-color: peru;
